# assessment-abb

./: .dockerignore  .env.example  .gitignore  .review-scope.md  ARCHITECTURE.md  Assessment Info.txt  CONVENTIONS.md  DEMO.md  README.md  conftest.py  corpus-v1.json  corpus.sample.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.plans/: 00-master-plan.md  01-foundations.md  02-scraper.md  03-indexing-rag-core.md  04-backend-api.md  05-frontend.md  06-visualization.md  07-containerization.md  08-eval-and-docs.md
apps/analytics/: Dockerfile  README.md  pyproject.toml
apps/analytics/abb_analytics/: cache.py  main.py  queries.py
apps/analytics/abb_analytics/routers/: analytics.py
apps/analytics/tests/: test_cache.py  test_queries.py  test_queries_integration.py  test_router.py
apps/chat/: Dockerfile  README.md  pyproject.toml
apps/chat/abb_chat/: context.py  generation.py  guardrail.py  lang_detect.py  llm.py  main.py  memory.py  persistence.py  prompts.py
apps/chat/abb_chat/routers/: chat.py
apps/chat/tests/: test_chat_route.py  test_context.py  test_guardrail.py  test_lang_detect.py  test_llm.py  test_social.py
apps/ingestion/: Dockerfile  README.md  pyproject.toml
apps/ingestion/abb_ingestion/: main.py  progress.py  redis_pool.py  worker.py
apps/ingestion/abb_ingestion/routers/: ingest.py
apps/ingestion/tests/: test_ingest_routes.py  test_progress.py  test_worker.py
apps/scraper/: README.md  pyproject.toml
apps/scraper/abb_scraper/: cli.py  config.py  exporters.py  extraction.py  metadata.py  pipelines.py  render.py  sample.py  settings.py
apps/scraper/abb_scraper/spiders/: abb.py
apps/scraper/tests/: test_cli.py  test_exporters.py  test_extraction.py  test_metadata.py  test_render.py  test_sample.py
apps/web/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  index.css  main.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  textarea.tsx
apps/web/src/i18n/: az.ts  en.ts  index.ts  ru.ts
apps/web/src/lib/: api.ts  lf.ts  schemas.ts  sse.test.ts  sse.ts
apps/web/src/modules/chat/: chat.screen.tsx
apps/web/src/modules/chat/components/: chat-input.tsx  citations-panel.tsx  message-bubble.tsx  message-list.tsx  suggested-questions.tsx
apps/web/src/modules/chat/hooks/: use-chat.ts
apps/web/src/modules/common/components/: abb-logo.tsx  assistant-avatar.tsx  header.tsx  language-switcher.tsx  theme-toggle.tsx
apps/web/src/modules/dashboard/: dashboard.screen.tsx
apps/web/src/modules/dashboard/components/: chart-card.tsx  date-range-filter.tsx  distribution-chart.tsx  kpi-cards.test.tsx  kpi-cards.tsx  quality-chart.tsx  top-questions-chart.tsx  volume-chart.tsx
apps/web/src/modules/dashboard/hooks/: use-analytics.ts
apps/web/src/modules/dashboard/lib/: fill-buckets.test.ts  fill-buckets.ts
apps/web/src/modules/upload/: upload.screen.tsx
apps/web/src/modules/upload/components/: dropzone.tsx  ingestion-progress.tsx
apps/web/src/modules/upload/hooks/: use-corpus.ts  use-ingestion.ts
apps/web/src/store/: app-store.ts
docs/: JOURNAL.md  PROJECT_SCOPE.md
docs/reviews/: p1-foundations.review.md  p2-scraper.review.md  p3-indexing-rag-core.review.md  p4-backend-api.review.md
eval/: Dockerfile  README.md  pyproject.toml
eval/abb_eval/: __init__.py  cli.py  golden_set.json  models.py  report.py  runner.py
eval/tests/: test_golden_set.py
infra/ci/: ci.yml
infra/postgres/: init.sql
libs/rag/: README.md  pyproject.toml
libs/rag/abb_rag/: __init__.py  chunking.py  db.py  dedup.py  embeddings.py  exceptions.py  log.py  models.py  pipeline.py  rate_limit.py  rerank.py  retriever.py  rrf.py  settings.py  vectorstore.py
libs/rag/tests/: test_chunking.py  test_dedup.py  test_pipeline.py  test_rate_limit.py  test_rerank.py  test_retriever.py  test_rrf.py  test_vectorstore.py
scripts/: run_eval_prod.sh  verify_rag.py
