[project]
name = "abb-eval"
version = "0.1.0"
description = "RAGAS evaluation harness + golden question set for ABB RAG"
requires-python = ">=3.12"
dependencies = [
    "abb-contracts",
    "abb-rag-core",
    "abb-chat",
    "datasets>=3.0",
    "langchain-community>=0.3,<0.4",
    "ragas==0.4.3",
]

[project.scripts]
abb-eval = "abb_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abb_eval"]
