[project]
name = "abb-analytics"
version = "0.1.0"
description = "ABB RAG analytics microservice (Q&A aggregations for the dashboard)"
requires-python = ">=3.12"
dependencies = [
    "abb-contracts",
    "abb-rag-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abb_analytics"]
