[project]
name = "abb-chat"
version = "0.1.0"
description = "ABB RAG chat microservice (question handling + response generation)"
requires-python = ">=3.12"
dependencies = [
    "abb-contracts",
    "abb-rag-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abb_chat"]
