[project]
name = "abb-chat"
version = "0.1.0"
description = "ABB RAG chat microservice (question handling + response generation)"
requires-python = ">=3.12"
dependencies = [
    "abb-contracts",
    "abb-rag-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
# Pulls the local BGE reranker (torch) via the core's `rerank` extra. Only the
# chat service runs reranking, so only this image opts in (build with the
# INSTALL_RERANK arg). Keep in sync with RERANK_ENABLED at runtime.
rerank = ["abb-rag-core[rerank]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abb_chat"]
