[project]
name = "abb-scraper"
version = "0.1.0"
description = "ABB website crawler producing corpus.json (Scrapy + Playwright + trafilatura)"
requires-python = ">=3.12"
dependencies = ["abb-contracts"]

[project.scripts]
abb-scrape = "abb_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abb_scraper"]
