[project]
name = "abb-rag-core"
version = "0.1.0"
description = "Shared RAG core: chunking, embeddings, pgvector, retrieval, rerank"
requires-python = ">=3.12"
dependencies = [
    "abb-contracts",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "langchain-openai>=0.2",
    "tiktoken>=0.8",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abb_rag"]
